--- a/src/languages/javascript.json
+++ b/src/languages/javascript.json
@@ -6,7 +6,7 @@
         "number": [ "\\d*[.,]?\\d+(?:[eEXx][-+]?[\\dA-F]+)?" ],
         "string": [ "([\"'])(?:(?=(\\\\?))\\2.)*?\\1", "\\/[\\x00-\\x7F][^\\s]{0,}\\/[gmisu]{0,}" ],
         "template": [ "`.+?`" ],
-        "operator": [ "(={1,3}|\\+=|\\-=|(\\?|\\:|\\*){1}|(\\!|\\<|\\>)={0,2}|(\\&|\\||\\~|\\+|\\-){1,2})" ]
+        "operator": [ "=>|={1,3}|\\+=|-=|(\\?|:|\\*){1}|(!|<|>)={0,2}", "(&|\\||~|\\+|-){1,2}" ]
     },
     "statements": {
         "builtin": {
