--- a/src/languages/javascript.json
+++ b/src/languages/javascript.json
@@ -5,7 +5,7 @@
         "fragment": [ "\\w{2,}\\d{0,}" ],
         "number": [ "\\d*[.,]?\\d+(?:[eEXx][-+]?[\\dA-F]+)?" ],
         "string": [ "([\"'])(?:(?=(\\\\?))\\2.)*?\\1", "\\/[\\x00-\\x7F][^\\s]{0,}\\/[gmisu]{0,}" ],
-        "template": [ "`.+?`" ],
+        "template": [ "(``)|(`.+?\\${[\\S\\s]+?}`)|(`[\\S\\s]+?`)" ],
         "operator": [ "=>|={1,3}|\\+=|-=|(\\?|:|\\*){1}|(!|<|>)={0,2}", "(&|\\||~|\\+|-){1,2}" ]
     },
     "statements": {
